memperbaiki dan mengetes fitur regional dan admin
