# src/modules/regions/dto/create-region.dto.ts
@@ -1,8 +1,14 @@
-import { ApiProperty } from '@nestjs/swagger';
-import { IsNotEmpty, IsString } from 'class-validator';
+import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
+import {
+  IsNotEmpty,
+  IsNumber,
+  IsOptional,
+  IsString,
+  IsArray,
+} from 'class-validator';
 
 export class CreateRegionDto {
-  @ApiProperty({ example: 'Wilayah Yogyakarta', description: 'nama Wilayah' })
+  @ApiProperty({ example: 'Wilayah Yogyakarta', description: 'Nama Wilayah' })
   @IsString()
   @IsNotEmpty()
   name!: string;
@@ -11,4 +17,40 @@ export class CreateRegionDto {
   @IsString()
   @IsNotEmpty()
   code!: string;
+
+  @ApiPropertyOptional({
+    example: -7.7956,
+    description: 'Titik pusat Latitude wilayah',
+  })
+  @IsOptional()
+  @IsNumber()
+  latitude?: number;
+
+  @ApiPropertyOptional({
+    example: 110.3695,
+    description: 'Titik pusat Longitude wilayah',
+  })
+  @IsOptional()
+  @IsNumber()
+  longitude?: number;
+
+  @ApiPropertyOptional({
+    example: 25.5,
+    description: 'Radius operasional wilayah dalam Kilometer',
+  })
+  @IsOptional()
+  @IsNumber()
+  radiusKm?: number;
+
+  @ApiPropertyOptional({
+    example: [
+      [-7.7, 110.3],
+      [-7.8, 110.4],
+      [-7.9, 110.3],
+    ],
+    description: 'Array koordinat poligon batas wilayah (GeoJSON coordinates)',
+  })
+  @IsOptional()
+  @IsArray()
+  boundaryPolygon?: any;
 }
