# src/modules/regions/dto/update-region.dto.ts
@@ -1,5 +1,11 @@
 import { ApiPropertyOptional } from '@nestjs/swagger';
-import { IsBoolean, IsOptional, IsString } from 'class-validator';
+import {
+  IsBoolean,
+  IsNumber,
+  IsOptional,
+  IsString,
+  IsArray,
+} from 'class-validator';
 
 export class UpdateRegionDto {
   @ApiPropertyOptional({ example: 'Region Yogyakarta Updated' })
@@ -16,4 +22,29 @@ export class UpdateRegionDto {
   @IsOptional()
   @IsBoolean()
   isActive?: boolean;
+
+  @ApiPropertyOptional({ example: -7.7956 })
+  @IsOptional()
+  @IsNumber()
+  latitude?: number;
+
+  @ApiPropertyOptional({ example: 110.3695 })
+  @IsOptional()
+  @IsNumber()
+  longitude?: number;
+
+  @ApiPropertyOptional({ example: 25.5 })
+  @IsOptional()
+  @IsNumber()
+  radiusKm?: number;
+
+  @ApiPropertyOptional({
+    example: [
+      [-7.7, 110.3],
+      [-7.8, 110.4],
+    ],
+  })
+  @IsOptional()
+  @IsArray()
+  boundaryPolygon?: any;
 }
